# tideloom

./: .gitignore  Cargo.toml  README.md  licenserc.toml
.github/: semantic.yml
.github/workflows/: ci.yml
docs/: composite-pattern.md
src/: errors.rs  lib.rs  types.rs
src/activities/: executor.rs  mod.rs  provider.rs  registry.rs
src/engine/: mod.rs  node_states.rs  processor.rs
src/messaging/: mod.rs
src/nodes/: graph.rs  id.rs  instance.rs  kind.rs  mod.rs  position.rs
src/outbox/: mod.rs
template/: Cargo.toml
template/src/: lib.rs
tideloom-core/: Cargo.toml
tideloom-core/examples/: composite_pattern.rs  explore_api.rs
tideloom-core/src/: lib.rs  main.rs
tideloom-core/src/node/: design.MD  mod.rs  node.rs  step.rs
tideloom-core/src/nodes/: asyncapi.rs  call.rs  do.rs  doing.rs  for.rs  mod.rs
tideloom-core/src/runtime/: executor.rs  mod.rs  step.rs
tideloom-core/src/steps/: asyncapi.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
