[workspace]
members = ["tideloom-core"]
resolver = "2"

[workspace.package]
edition = "2024"
homepage = "https://github.com/tideloom/tideloom"
repository = "https://github.com/tideloom/tideloom"
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.90.0"

[workspace.lints.rust]
unknown_lints = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"

[workspace.metadata.release]
pre-release-commit-message = "chore: release v{{version}}"
shared-version = true
sign-tag = true
tag-name = "v{{version}}"
