[package]
name = "tideloom"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A minimal, pluggable workflow runner skeleton inspired by serverlessworkflow.io and lemline."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
async-trait = "0.1"

[features]
# Optional feature to plug a real jq engine later
jq = []
