[package]
name = "tideloom-core"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = {version = "1.0.228", features = ["derive"]}
serde_json = {version = "1.0.145"}
serde_yaml = {version = "0.9.34"}
serverless_workflow_builders = "1.0.0-alpha6.3"
serverless_workflow_core = "1.0.0-alpha6.3"
tokio = "1.47.1"

[lints]
workspace = true
